--- a/css/_var.scss
+++ b/css/_var.scss
@@ -1,6 +1,8 @@
 $count-minW: 1280px;
+$count-maxW: 1920px;
 $mainBgc: #0b2139;
 $color_01: #c5c5c5;
 $color_02: #fff;
+$color_03: #1b1b1b;
 $clr_ftTxt: #8d8d8d;
 $clr_Txt: #caa653;
