--- a/css/_main.scss
+++ b/css/_main.scss
@@ -1,5 +1,5 @@
 body {
-    background-color: #102e4e;
+    background-color: #0b2d53;
 }
 
 // ===== header start =====
@@ -81,14 +81,14 @@ body {
         }
 
         .hd_signIn {
-            &[data-signIn="1"] > div[data-signIn="0"] {
-                display: none;
+            &[data-signIn="0"] > div[data-signIn="0"] {
+                display: flex;
             }
-            &[data-signIn="0"] > div[data-signIn="1"] {
-                display: none;
+            &[data-signIn="1"] > div[data-signIn="1"] {
+                display: flex;
             }
             & > div {
-                display: flex;
+                display: none;
                 justify-content: flex-end;
             }
 
@@ -258,6 +258,35 @@ body {
     }
 }
 
+// ===== content start =====
+.content {
+    max-width: $count-maxW;
+    min-width: $count-minW;
+    min-height: calc(100vh - 463px);
+    margin: auto;
+    padding-bottom: 20px;
+    color: #fff;
+    position: relative;
+    &::before {
+        content: "";
+        width: 100%;
+        height: 100%;
+        background: url(../images/bodyBg.jpg) no-repeat center bottom;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        z-index: -1;
+        opacity: 0.4;
+    }
+}
+
+.contentBox {
+    width: 100%;
+    max-width: $count-minW;
+    margin: auto;
+    padding: 0 20px;
+}
+
 // ===== footer start =====
 .footer {
     width: 100%;
@@ -270,7 +299,7 @@ body {
     // ft_top
     .ft_top {
         background-color: #313131;
-        &>div{
+        & > div {
             width: 100%;
             max-width: 1800px;
             min-width: $count-minW;
@@ -339,13 +368,4 @@ body {
             }
         }
     }
-}
-
-// ===== content start =====
-.content{
-    max-width: 1920px;
-    min-width: $count-minW;
-    min-height: calc(100vh - 463px);
-    margin: auto;
-    color: #fff;
 }
