--- a/css/all.css
+++ b/css/all.css
@@ -140,7 +140,7 @@ body {
   width: 478px;
   height: 86px;
   margin-bottom: 10px;
-  background-image: url(./images/hd_logo.png);
+  background-image: url(../images/hd_logo.png);
   cursor: pointer;
   text-indent: 101%;
   overflow: hidden;
@@ -318,15 +318,15 @@ body {
 }
 
 .header .hd_top .hd_signIn .signIn_msg .signIn_icon.member {
-  background: url(./images/icon-member.png);
+  background: url(../images/icon-member.png);
 }
 
 .header .hd_top .hd_signIn .signIn_msg .signIn_icon.chip {
-  background: url(./images/icon-chip.png);
+  background: url(../images/icon-chip.png);
 }
 
 .header .hd_top .hd_signIn .signIn_msg .signIn_icon.mail {
-  background: url(./images/icon-mail.png);
+  background: url(../images/icon-mail.png);
 }
 
 .header .hd_top .signIn_code {
@@ -506,7 +506,7 @@ body {
   content: "";
   width: 100%;
   height: 100%;
-  background: url(./images/bodyBg.jpg) no-repeat center bottom;
+  background: url(../images/bodyBg.jpg) no-repeat center bottom;
   position: absolute;
   bottom: 0;
   left: 0;
