--- a/css/all.css
+++ b/css/all.css
@@ -737,7 +737,7 @@ body {
 .betList .betTitle .icon {
   width: 22px;
   height: 22px;
-  background: url(./images/icon-darts.png) no-repeat center/cover;
+  background: url(../images/icon-darts.png) no-repeat center/cover;
 }
 
 .betList .betTitle span {
@@ -984,7 +984,7 @@ body {
 }
 
 .betList tr:nth-child(1) .betNb {
-  background-image: url(./images/betNb-1.png);
+  background-image: url(../images/betNb-1.png);
 }
 
 .betList tr:nth-child(1) .betNb::after {
@@ -992,7 +992,7 @@ body {
 }
 
 .betList tr:nth-child(2) .betNb {
-  background-image: url(./images/betNb-2.png);
+  background-image: url(../images/betNb-2.png);
 }
 
 .betList tr:nth-child(2) .betNb::after {
@@ -1000,7 +1000,7 @@ body {
 }
 
 .betList tr:nth-child(3) .betNb {
-  background-image: url(./images/betNb-3.png);
+  background-image: url(../images/betNb-3.png);
 }
 
 .betList tr:nth-child(3) .betNb::after {
@@ -1246,7 +1246,7 @@ body {
 }
 
 .betList td .betScore .scoreIcon[data-nb="0"] .star {
-  background-image: url(./images/betStar-0.png);
+  background-image: url(../images/betStar-0.png);
 }
 
 .betList td .betScore .scoreIcon[data-nb="0"] .ball::before {
@@ -1254,7 +1254,7 @@ body {
 }
 
 .betList td .betScore .scoreIcon[data-nb="0.5"] .star {
-  background-image: url(./images/betStar-0.5.png);
+  background-image: url(../images/betStar-0.5.png);
 }
 
 .betList td .betScore .scoreIcon[data-nb="0.5"] .ball::before {
@@ -1262,7 +1262,7 @@ body {
 }
 
 .betList td .betScore .scoreIcon[data-nb="1"] .star {
-  background-image: url(./images/betStar-1.png);
+  background-image: url(../images/betStar-1.png);
 }
 
 .betList td .betScore .scoreIcon[data-nb="1"] .ball::before {
@@ -1270,7 +1270,7 @@ body {
 }
 
 .betList td .betScore .scoreIcon[data-nb="1.5"] .star {
-  background-image: url(./images/betStar-1.5.png);
+  background-image: url(../images/betStar-1.5.png);
 }
 
 .betList td .betScore .scoreIcon[data-nb="1.5"] .ball::before {
@@ -1278,7 +1278,7 @@ body {
 }
 
 .betList td .betScore .scoreIcon[data-nb="2"] .star {
-  background-image: url(./images/betStar-2.png);
+  background-image: url(../images/betStar-2.png);
 }
 
 .betList td .betScore .scoreIcon[data-nb="2"] .ball::before {
@@ -1286,7 +1286,7 @@ body {
 }
 
 .betList td .betScore .scoreIcon[data-nb="2.5"] .star {
-  background-image: url(./images/betStar-2.5.png);
+  background-image: url(../images/betStar-2.5.png);
 }
 
 .betList td .betScore .scoreIcon[data-nb="2.5"] .ball::before {
@@ -1294,7 +1294,7 @@ body {
 }
 
 .betList td .betScore .scoreIcon[data-nb="3"] .star {
-  background-image: url(./images/betStar-3.png);
+  background-image: url(../images/betStar-3.png);
 }
 
 .betList td .betScore .scoreIcon[data-nb="3"] .ball::before {
@@ -1302,7 +1302,7 @@ body {
 }
 
 .betList td .betScore .scoreIcon[data-nb="3.5"] .star {
-  background-image: url(./images/betStar-3.5.png);
+  background-image: url(../images/betStar-3.5.png);
 }
 
 .betList td .betScore .scoreIcon[data-nb="3.5"] .ball::before {
@@ -1310,7 +1310,7 @@ body {
 }
 
 .betList td .betScore .scoreIcon[data-nb="4"] .star {
-  background-image: url(./images/betStar-4.png);
+  background-image: url(../images/betStar-4.png);
 }
 
 .betList td .betScore .scoreIcon[data-nb="4"] .ball::before {
@@ -1318,7 +1318,7 @@ body {
 }
 
 .betList td .betScore .scoreIcon[data-nb="4.5"] .star {
-  background-image: url(./images/betStar-4.5.png);
+  background-image: url(../images/betStar-4.5.png);
 }
 
 .betList td .betScore .scoreIcon[data-nb="4.5"] .ball::before {
@@ -1326,7 +1326,7 @@ body {
 }
 
 .betList td .betScore .scoreIcon[data-nb="5"] .star {
-  background-image: url(./images/betStar-5.png);
+  background-image: url(../images/betStar-5.png);
 }
 
 .betList td .betScore .scoreIcon[data-nb="5"] .ball::before {
