--- a/css/_main.scss
+++ b/css/_main.scss
@@ -1,5 +1,6 @@
 body {
     background-color: #0b2d53;
+    position: relative;
 }
 
 // ===== header start =====
@@ -9,6 +10,7 @@ body {
     margin: auto;
     min-height: 188px;
     background-color: $mainBgc;
+    position: relative;
     // hd_top start
     .hd_top {
         width: $count-minW;
@@ -214,6 +216,12 @@ body {
         width: 100%;
         height: 48px;
         background: linear-gradient(90deg, transparent 10%, #000, transparent 90%);
+        &.on {
+            background: rgba(0, 0, 0, 0.85);
+            position: fixed;
+            top: 0;
+            z-index: 10;
+        }
         ul {
             height: 100%;
 
@@ -259,6 +267,71 @@ body {
 }
 
 // ===== content start =====
+.mainCnt {
+    position: relative;
+    .leftTool,
+    .rightTool {
+        position: absolute;
+        z-index: 10;
+    }
+    .leftTool {
+        width: 97px;
+        right: 1365px;
+        left: 0;
+        margin: auto;
+        @include rwd(1490) {
+            right: 10px;
+            left: unset;
+        }
+    }
+    .rightTool {
+        width: 99px;
+        right: 0;
+        left: 1365px;
+        margin: auto;
+        @include rwd(1490) {
+            right: 10px;
+            left: unset;
+            margin-top: 100px;
+        }
+    }
+
+    .floatAd {
+        & > img {
+            display: block;
+            margin-bottom: 10px;
+        }
+        @include rwd(1490) {
+            display: none;
+        }
+    }
+    .getGift {
+        width: 95%;
+        height: 95%;
+        margin: auto;
+        padding: 20px;
+        background-color: #282828;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+    .goTop {
+        height: 30px;
+        background-color: #000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #fff;
+        font-size: 1.2rem;
+        font-weight: 300;
+        cursor: pointer;
+        img {
+            width: 20px;
+            height: 20px;
+            margin-right: 5px;
+        }
+    }
+}
+
 .content {
     max-width: $count-maxW;
     min-width: $count-minW;
@@ -278,13 +351,19 @@ body {
         z-index: -1;
         opacity: 0.4;
     }
-}
 
-.contentBox {
-    width: 100%;
-    max-width: $count-minW;
-    margin: auto;
-    padding: 0 20px;
+    .contBox-min {
+        width: 100%;
+        max-width: $count-minW;
+        margin: auto;
+        padding: 0 20px;
+    }
+
+    .contBox-max {
+        width: 100%;
+        max-width: $count-maxW;
+        margin: auto;
+    }
 }
 
 // ===== footer start =====
@@ -294,7 +373,7 @@ body {
     min-height: 275px;
     margin: auto;
     color: $clr_ftTxt;
-    // background: url(../images/ftTestbg.jpg) no-repeat center;
+    position: relative;
 
     // ft_top
     .ft_top {
@@ -365,6 +444,59 @@ body {
             }
             li + li {
                 margin-left: 30px;
+            }
+        }
+    }
+
+    // ftAd
+    .ftAd {
+        width: 100%;
+        pointer-events: none;
+        position: absolute;
+        padding: 0 20px;
+        bottom: 40px;
+        z-index: 9;
+        display: flex;
+        justify-content: space-between;
+        & > div {
+            position: relative;
+            pointer-events: auto;
+            &.on {
+                visibility:hidden;
+                pointer-events: none;
+            }
+        }
+        .ftAd_close {
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+            background-color: #000;
+            position: absolute;
+            cursor: pointer;
+            opacity: 0.7;
+            transition: opacity 0.3s ;
+            @include pos(tr, -10px);
+            @include hover{
+                &:hover{
+                   
+                    opacity: 1;
+                }
+            };
+            &::after,
+            &::before {
+                content: "";
+                width: 22px;
+                height: 2px;
+                margin: auto;
+                background-color: #fff;
+                position: absolute;
+                @include pos(tblr, 0);
+            }
+            &::after {
+                transform: rotate(45deg);
+            }
+            &::before {
+                transform: rotate(-45deg);
             }
         }
     }
