--- a/css/_dialog.scss
+++ b/css/_dialog.scss
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     z-index: 999;
-    // display: none;
+    display: none;
     &.on{
         display: block;
     }
@@ -22,11 +22,11 @@
         height: 435px;
         margin: auto;
         padding: 34px 20px;
-        // display: none;
+        display: none;
         position: absolute;
         @include pos(tblr,0);
-        // background: linear-gradient(0deg,#091422,#0e263c);
-        background: url(../images/testBg.jpg) no-repeat center / cover;
+        background: linear-gradient(0deg,#091422,#0e263c);
+        // background: url(../images/testBg.jpg) no-repeat center / cover;
         box-shadow: 5px 5px 10px #000;
         border: 1px solid #f6bf3d;
         &.on{
@@ -35,7 +35,6 @@
         .title{
             padding-bottom: 21px;
             margin-bottom: 47px;
-            margin-bottom: 5px;
             color: #e9b21a;
             font-size: 2.1rem;
             font-weight: 400;
@@ -62,6 +61,12 @@
                 display: flex;
                 align-items: center;
                 justify-content: flex-end;
+                margin-bottom: 31px;
+            }
+            span{
+                font-weight: bold;
+                color: #869BAE;
+                margin-right: 6px;
             }
             .iptBox{
                 width: 100%;
@@ -69,10 +74,15 @@
                 height: 100%;
                 border-radius: 5px;
                 background-color: #100F1F;
-                box-shadow: 0 0 8px #000 inset,0 1px 1px #374268;
-
+                box-shadow: 0 0 6px #000 inset, 0 1px 1px #313a5c;
                 input{
                     width: 100%;
+                    height: 100%;
+                    @include fullNone;
+                    padding: 0 20px;
+                    color: #737882;
+                    font-weight: bold;
+                    font-size: 1rem;
                 }
             }
         }
