--- a/css/_dialog.scss
+++ b/css/_dialog.scss
@@ -1,38 +1,39 @@
-.dialogBox{
+.dialogBox {
     width: 100%;
     height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 999;
+    display: flex;
+    align-items: center;
     display: none;
-    &.on{
-        display: block;
+    &.on {
+        display: flex;
     }
-    .dialog_close{
+    .dialog_close {
         width: 100%;
         height: 100%;
         background-color: rgba(0, 0, 0, 0.6);
         position: absolute;
-        @include pos(tblr,0);
-    }  
-    .dialog_cnt01{
+        @include pos(tblr, 0);
+    }
+    .dialog_cnt01 {
         width: 100%;
         max-width: 779px;
         height: 435px;
         margin: auto;
-        padding: 34px 20px;
-        display: none;
-        position: absolute;
-        @include pos(tblr,0);
-        background: linear-gradient(0deg,#091422,#0e263c);
-        // background: url(../images/testBg.jpg) no-repeat center / cover;
+        padding: 34px 20px 0;
+        position: relative;
+        z-index: 5;
+        background: linear-gradient(0deg, #091422, #0e263c);
+        // background: url(../images/testBg.jpg) no-repeat center/cover;
         box-shadow: 5px 5px 10px #000;
         border: 1px solid #f6bf3d;
-        &.on{
+        &.on {
             display: block;
         }
-        .title{
+        .title {
             padding-bottom: 21px;
             margin-bottom: 47px;
             color: #e9b21a;
@@ -41,41 +42,46 @@
             letter-spacing: 5px;
             text-align: center;
             position: relative;
-            &::before{
-                content: '';
+            &::before {
+                content: "";
                 width: 100%;
                 height: 2px;
-                background: linear-gradient(90deg,transparent,#71784C,transparent);
+                background: linear-gradient(90deg, transparent, #71784c, transparent);
                 position: absolute;
                 margin: auto;
-                @include pos(blr,0);
+                @include pos(blr, 0);
                 border-radius: 50%;
             }
         }
-        .innerBox{
+        .innerBox {
             width: 100%;
             max-width: 485px;
             margin: auto;
-            &>div{
+            & > div {
                 height: 35px;
                 display: flex;
                 align-items: center;
                 justify-content: flex-end;
                 margin-bottom: 31px;
             }
-            span{
+            span {
+                width: 90px;
+                text-align: right;
                 font-weight: bold;
-                color: #869BAE;
+                color: #869bae;
                 margin-right: 6px;
+                flex-shrink: 0;
             }
-            .iptBox{
+            .iptBox {
                 width: 100%;
                 max-width: 390px;
                 height: 100%;
                 border-radius: 5px;
-                background-color: #100F1F;
+                background-color: #100f1f;
                 box-shadow: 0 0 6px #000 inset, 0 1px 1px #313a5c;
-                input{
+                display: flex;
+                align-items: center;
+                input {
                     width: 100%;
                     height: 100%;
                     @include fullNone;
@@ -83,6 +89,74 @@
                     color: #737882;
                     font-weight: bold;
                     font-size: 1rem;
+                }
+                .selectBox {
+                    width: 140px;
+                    height: 100%;
+                    padding: 0 15px;
+                    flex-shrink: 0;
+                    align-items: center;
+                    position: relative;
+                    &::before {
+                        content: "";
+                        width: 1px;
+                        height: calc(100% - 10px);
+                        margin: auto;
+                        background-color: #172a5a;
+                        position: absolute;
+                        @include pos(tbl, 0);
+                    }
+                    select {
+                        width: 100%;
+                        height: 100%;
+                        color: #fff;
+                        @include fullNone;
+                        font-size: 1rem;
+                        letter-spacing: 1px;
+                        appearance: none;
+                        -moz-appearance: none;
+                        -webkit-appearance: none;
+                        background: url("../images/arrow-bottom.png") no-repeat right center transparent;
+                        cursor: pointer;
+                    }
+                    option {
+                        height: 32px;
+                        line-height: 32px;
+                        background-color: #193452;
+                    }
+                }
+            }
+            .codeBox {
+                width: 120px;
+                margin-left: 10px;
+            }
+        }
+        .dialogBtn_01 {
+            margin-top: 50px;
+            cursor: pointer;
+            button {
+                height: 40px;
+                padding: 0 30px;
+                margin: auto;
+                @include fullNone;
+                color: #fff;
+                font-size: 1.1rem;
+                font-weight: bold;
+                letter-spacing: 1px;
+                background: linear-gradient(0deg, #4674c8, #304f8a, #4674c8);
+                border-radius: 40px;
+                box-shadow: 0 1px 1px #3d4046, 0px 0px 2px #35383d inset;
+                border: 2px solid #616772;
+                opacity: 0.7;
+                transition: .3s;
+                &:active{
+                    opacity: 1;
+                    transform: translateY(2px);
+                }
+                @include hover {
+                    &:hover {
+                        opacity: 1;
+                    }
                 }
             }
         }
