--- a/css/all.css
+++ b/css/all.css
@@ -53,7 +53,6 @@ input[type=number]::-webkit-outer-spin-button,
 input[type="button"],
 input[type="text"],
 input[type="number"],
-select,
 textarea {
   outline: none;
   font-family: 'Helvetica', sans-serif;
@@ -1907,11 +1906,19 @@ body {
   top: 0;
   left: 0;
   z-index: 999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   display: none;
 }
 
 .dialogBox.on {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .dialogBox .dialog_close {
@@ -1930,13 +1937,9 @@ body {
   max-width: 779px;
   height: 435px;
   margin: auto;
-  padding: 34px 20px;
-  display: none;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  padding: 34px 20px 0;
+  position: relative;
+  z-index: 5;
   background: -webkit-gradient(linear, left bottom, left top, from(#091422), to(#0e263c));
   background: linear-gradient(0deg, #091422, #0e263c);
   -webkit-box-shadow: 5px 5px 10px #000;
@@ -1960,11 +1963,11 @@ body {
 }
 
 .dialogBox .dialog_cnt01 .title::before {
-  content: '';
+  content: "";
   width: 100%;
   height: 2px;
-  background: -webkit-gradient(linear, left top, right top, from(transparent), color-stop(#71784C), to(transparent));
-  background: linear-gradient(90deg, transparent, #71784C, transparent);
+  background: -webkit-gradient(linear, left top, right top, from(transparent), color-stop(#71784c), to(transparent));
+  background: linear-gradient(90deg, transparent, #71784c, transparent);
   position: absolute;
   margin: auto;
   bottom: 0;
@@ -1994,9 +1997,13 @@ body {
 }
 
 .dialogBox .dialog_cnt01 .innerBox span {
+  width: 90px;
+  text-align: right;
   font-weight: bold;
-  color: #869BAE;
+  color: #869bae;
   margin-right: 6px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
 }
 
 .dialogBox .dialog_cnt01 .innerBox .iptBox {
@@ -2004,9 +2011,15 @@ body {
   max-width: 390px;
   height: 100%;
   border-radius: 5px;
-  background-color: #100F1F;
+  background-color: #100f1f;
   -webkit-box-shadow: 0 0 6px #000 inset, 0 1px 1px #313a5c;
           box-shadow: 0 0 6px #000 inset, 0 1px 1px #313a5c;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .dialogBox .dialog_cnt01 .innerBox .iptBox input {
@@ -2019,5 +2032,95 @@ body {
   color: #737882;
   font-weight: bold;
   font-size: 1rem;
+}
+
+.dialogBox .dialog_cnt01 .innerBox .iptBox .selectBox {
+  width: 140px;
+  height: 100%;
+  padding: 0 15px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.dialogBox .dialog_cnt01 .innerBox .iptBox .selectBox::before {
+  content: "";
+  width: 1px;
+  height: calc(100% - 10px);
+  margin: auto;
+  background-color: #172a5a;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.dialogBox .dialog_cnt01 .innerBox .iptBox .selectBox select {
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  background: transparent;
+  outline: none;
+  border: none;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  background: url("../images/arrow-bottom.png") no-repeat right center transparent;
+  cursor: pointer;
+}
+
+.dialogBox .dialog_cnt01 .innerBox .iptBox .selectBox option {
+  height: 32px;
+  line-height: 32px;
+  background-color: #193452;
+}
+
+.dialogBox .dialog_cnt01 .innerBox .codeBox {
+  width: 120px;
+  margin-left: 10px;
+}
+
+.dialogBox .dialog_cnt01 .dialogBtn_01 {
+  margin-top: 50px;
+  cursor: pointer;
+}
+
+.dialogBox .dialog_cnt01 .dialogBtn_01 button {
+  height: 40px;
+  padding: 0 30px;
+  margin: auto;
+  background: transparent;
+  outline: none;
+  border: none;
+  color: #fff;
+  font-size: 1.1rem;
+  font-weight: bold;
+  letter-spacing: 1px;
+  background: -webkit-gradient(linear, left bottom, left top, from(#4674c8), color-stop(#304f8a), to(#4674c8));
+  background: linear-gradient(0deg, #4674c8, #304f8a, #4674c8);
+  border-radius: 40px;
+  -webkit-box-shadow: 0 1px 1px #3d4046, 0px 0px 2px #35383d inset;
+          box-shadow: 0 1px 1px #3d4046, 0px 0px 2px #35383d inset;
+  border: 2px solid #616772;
+  opacity: 0.7;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.dialogBox .dialog_cnt01 .dialogBtn_01 button:active {
+  opacity: 1;
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+}
+
+@media (any-hover: hover) {
+  .dialogBox .dialog_cnt01 .dialogBtn_01 button:hover {
+    opacity: 1;
+  }
 }
 /*# sourceMappingURL=all.css.map */
