--- a/css/_dialog.scss
+++ b/css/_dialog.scss
@@ -21,9 +21,8 @@
     .dialog_cnt01 {
         width: 100%;
         max-width: 779px;
-        height: 435px;
         margin: auto;
-        padding: 34px 20px 0;
+        padding: 34px 20px ;
         position: relative;
         z-index: 5;
         background: linear-gradient(0deg, #091422, #0e263c);
