--- a/css/all.css
+++ b/css/all.css
@@ -547,6 +547,7 @@ body {
 
 .mainCnt .leftTool {
   width: 97px;
+  top: calc(100vw * 0.1986 + 55px);
   right: 1365px;
   left: 0;
   margin: auto;
@@ -561,6 +562,7 @@ body {
 
 .mainCnt .rightTool {
   width: 99px;
+  top: calc(100vw * 0.1986 + 55px);
   right: 0;
   left: 1365px;
   margin: auto;
@@ -571,6 +573,13 @@ body {
     right: 10px;
     left: unset;
     margin-top: 100px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .mainCnt .rightTool,
+  .mainCnt .leftTool {
+    top: calc(1920px * 0.1986 + 55px);
   }
 }
 
