--- a/css/_method.scss
+++ b/css/_method.scss
@@ -64,3 +64,52 @@
         @content;
     }
 }
+
+// 按鈕樣式 (垂直漸層色顛倒)
+// 文字顏色,內陰影顏色,背景漸層色1&2
+@mixin btn_linear($txtColor,$shadow, $bgc...){
+    height: 34px;
+    line-height: 34px;
+    text-align: center;
+    display: inline-block;
+    background: linear-gradient(0deg, nth($bgc, 1), nth($bgc, 2));
+    box-shadow: -1px 1px 1px $shadow inset;
+    border-radius: 5px;
+    overflow: hidden;
+    position: relative;  
+    color: $txtColor;
+    user-select: none;
+    cursor: pointer;
+    transition: .3s;
+    .btn_cnt{
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        color: $txtColor;
+        position: relative;
+        margin: auto;
+        font-weight: bold;
+        font-size: 1rem;
+        letter-spacing: 1px;
+    } 
+    &::before{
+       content: '';
+       width: 100%;
+       height: 100%;
+       position: absolute;
+       @include pos(tl,0);
+       background: linear-gradient(180deg, nth($bgc, 1), nth($bgc, 2));
+       box-shadow: -1px 1px 1px $shadow inset;
+       opacity: 0;
+       transition: .3s;
+    }
+    &:active{
+        opacity: 1;
+        transform: translateY(2px);
+    }
+    @media (any-hover: hover) {
+       &:hover::before{
+         opacity: 1;
+       }
+    }
+}
